--- a/Kang-Asep-Si-Penjual-Gorengan-Raih-RTP-Maksimal.html
+++ b/Kang-Asep-Si-Penjual-Gorengan-Raih-RTP-Maksimal.html
@@ -11,8 +11,8 @@
         <link rel="preconnect dns-prefetch" href="https://fonts.gstatic.com/" crossorigin>
         <meta name="robots" content="index, follow" />
         <link rel="canonical" href="https://kabar-online.github.io/viral/Kang-Asep-Si-Penjual-Gorengan-Raih-RTP-Maksimal.html">
-        <link rel="shortcut icon" href="https://images.linkcdn.cloud/V2/305/favicon/favicon-1243761658.webp">
-        <link rel="apple-touch-icon-precomposed" href="https://images.linkcdn.cloud/V2/305/favicon/favicon-1243761658.webp" />
+        <link rel="shortcut icon" href="https://www.svgrepo.com/show/238776/king.svg">
+        <link rel="apple-touch-icon-precomposed" href="https://www.svgrepo.com/show/238776/king.svg" />
         <meta name="author" content="Kang Asep Si Penjual Gorengan Raih RTP Maksimal" />
         <meta name="publisher" content="Kang Asep Si Penjual Gorengan Raih RTP Maksimal" />
         <meta name="categories" content="website">
