--- a/Modal-Kecil-Bisa-Berlipat-Ganda-di-Mahjong-Ways.html
+++ b/Modal-Kecil-Bisa-Berlipat-Ganda-di-Mahjong-Ways.html
@@ -11,8 +11,8 @@
         <link rel="preconnect dns-prefetch" href="https://fonts.gstatic.com/" crossorigin>
         <meta name="robots" content="index, follow" />
         <link rel="canonical" href="https://kabar-online.github.io/viral/Modal-Kecil-Bisa-Berlipat-Ganda-di-Mahjong-Ways.html">
-        <link rel="shortcut icon" href="https://images.linkcdn.cloud/V2/305/favicon/favicon-1243761658.webp">
-        <link rel="apple-touch-icon-precomposed" href="https://images.linkcdn.cloud/V2/305/favicon/favicon-1243761658.webp" />
+        <link rel="shortcut icon" href="https://www.svgrepo.com/show/238776/king.svg">
+        <link rel="apple-touch-icon-precomposed" href="https://www.svgrepo.com/show/238776/king.svg" />
         <meta name="author" content="Modal Kecil Bisa Berlipat Ganda di Mahjong Ways" />
         <meta name="publisher" content="Modal Kecil Bisa Berlipat Ganda di Mahjong Ways" />
         <meta name="categories" content="website">
